knit_tracker_app/app/components/KnittingGrid.module.css
.projectHeaders {
    display: flex;
    gap: 375px;
}

.stitch {
    padding: 0;
    border: 1px solid #ccc;
}

.stitchSelected {
    padding: 0;
    font-weight: bold;
    color: black;
    border: 1px solid #ccc;
    background-color: #FFE900;
}

.stitchInput {
    width: 24px;
    height: 24px;
    padding: 0;
    border: none;
    text-align: center;
    font-size: 12px;
    outline: none;
}

.stitchRowLayout {
    display: flex;
}

.additionalRowInfo {
    width: 100px;
    height: 24px;
    margin-left: 5px;
    margin-top:2px;
    border: 1px solid #ccc;
    text-align: center;
    font-size: 12px;
    outline: none;
}

